source-codes/python/bhnEKnJXTcUkUmfJbJYp2QqWBu92/jWY3y/error.txt
  File "/source/main.py", line 1
    print("hello nai)
          ^
SyntaxError: unterminated string literal (detected at line 1)
